welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: ';' expected but ',' found.
        max1 = nums(i),
                      ^