welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var taille = nums.length
  var max1 = nums(0)
  var max2 = nums(0)
  for ( i <- 0 to taille - 1)
  	{
      if (nums(i)>max1)
      {
        max2 = max1;
        max1 = nums(i),
        
      }
    }
  return max2 }
